--- a/src/ui/Find.fxml
+++ b/src/ui/Find.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button fx:id="findButton" layoutX="276.0" layoutY="191.0" mnemonicParsing="false" onAction="#find" text="Find" />
       <TextField fx:id="findText" layoutX="207.0" layoutY="137.0" />
       <Label layoutX="192.0" layoutY="91.0" text="Escribe el nombre de la estacion " />
+      <Button fx:id="returnButton" layoutX="52.0" layoutY="335.0" mnemonicParsing="false" onAction="#back" text="Volver" />
    </children>
 </AnchorPane>
