--- a/src/ui/Find.fxml
+++ b/src/ui/Find.fxml
@@ -2,14 +2,18 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="findButton" layoutX="276.0" layoutY="191.0" mnemonicParsing="false" onAction="#find" text="Find" />
-      <TextField fx:id="findText" layoutX="207.0" layoutY="137.0" />
-      <Label layoutX="192.0" layoutY="91.0" text="Escribe el nombre de la estacion " />
+      <Button fx:id="findButton" layoutX="259.0" layoutY="163.0" mnemonicParsing="false" onAction="#find" text="Find" />
+      <TextField fx:id="originTF" layoutX="28.0" layoutY="114.0" prefHeight="25.0" prefWidth="231.0" />
+      <Label layoutX="26.0" layoutY="91.0" text="Escribe el nombre de la estacion de origen " />
       <Button fx:id="returnButton" layoutX="52.0" layoutY="335.0" mnemonicParsing="false" onAction="#back" text="Volver" />
+      <Label layoutX="307.0" layoutY="91.0" text="Escribe el nombre de la estacion de destino" />
+      <TextField fx:id="destinationTF" layoutX="307.0" layoutY="114.0" prefHeight="25.0" prefWidth="231.0" />
+      <TextArea fx:id="minimumTA" layoutX="331.0" layoutY="176.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
 </AnchorPane>
