--- a/src/ui/Add.fxml
+++ b/src/ui/Add.fxml
@@ -1,20 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Ellipse?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="623.0" style="-fx-background-color: #2965BD;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="addVertexButton" layoutX="268.0" layoutY="140.0" mnemonicParsing="false" onAction="#addVertex" text="Agregar" />
-      <TextField fx:id="vertexText" layoutX="207.0" layoutY="85.0" />
-      <TextField fx:id="v1Text" layoutX="46.0" layoutY="257.0" />
-      <TextField fx:id="v2Text" layoutX="249.0" layoutY="257.0" />
-      <TextField fx:id="weightText" layoutX="462.0" layoutY="257.0" prefHeight="31.0" prefWidth="74.0" />
-      <Button fx:id="addEdgeButton" layoutX="268.0" layoutY="306.0" mnemonicParsing="false" onAction="#addEdge" text="Agregar" />
-      <Label layoutX="273.0" layoutY="38.0" text="Estacion" />
-      <Label layoutX="269.0" layoutY="217.0" text="Conexion" />
-      <Button fx:id="returnButton" layoutX="46.0" layoutY="337.0" mnemonicParsing="false" onAction="#back" text="Volver" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c2d6f7" height="400.0" stroke="#ffffff00" strokeType="INSIDE" width="73.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="400.0" stroke="#182f54" strokeType="INSIDE" strokeWidth="4.0" width="623.0" />
+      <Button fx:id="addVertexButton" layoutX="418.0" layoutY="135.0" mnemonicParsing="false" onAction="#addVertex" prefHeight="29.0" prefWidth="150.0" style="-fx-background-color: #0F408D;" text="Agregar Estacion" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></Button>
+      <TextField fx:id="vertexText" layoutX="331.0" layoutY="78.0" prefHeight="31.0" prefWidth="174.0" style="-fx-background-color: #c2d6f7;">
+         <font>
+            <Font size="15.0" />
+         </font></TextField>
+      <TextField fx:id="weightTF" layoutX="418.0" layoutY="259.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #c2d6f7;">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></TextField>
+      <Button fx:id="addEdgeButton" layoutX="418.0" layoutY="310.0" mnemonicParsing="false" onAction="#addEdge" prefHeight="29.0" prefWidth="150.0" style="-fx-background-color: #0F408D;" text="Agregar Ruta" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></Button>
+      <Label layoutX="268.0" layoutY="29.0" text="Estacion" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="28.0" />
+         </font></Label>
+      <Label layoutX="295.0" layoutY="183.0" text="Ruta" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="28.0" />
+         </font></Label>
+      <Button fx:id="returnBTN" layoutX="535.0" layoutY="357.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="74.0" style="-fx-background-color: #0F408D;" text="Volver" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></Button>
+      <ChoiceBox fx:id="v1CB" layoutX="95.0" layoutY="261.0" prefWidth="150.0" style="-fx-background-color: #c2d6f7;" />
+      <ChoiceBox fx:id="v2CB" layoutX="252.0" layoutY="261.0" prefWidth="150.0" style="-fx-background-color: #c2d6f7;" />
+      <Label layoutX="95.0" layoutY="232.0" text="Estacion Inicial:" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="252.0" layoutY="232.0" text="Estacion Final:" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="418.0" layoutY="232.0" text="Distancia:" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="138.0" layoutY="84.0" text="Nombre de la Estacion:" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font>
+      </Label>
+      <Ellipse fill="#dd0d27" layoutX="597.0" layoutY="29.0" radiusX="13.0" radiusY="15.0" stroke="#dd0d27" strokeType="INSIDE" />
+      <Ellipse fill="#2495c8" layoutX="544.0" layoutY="33.0" radiusX="9.0" radiusY="11.0" stroke="#2495c8" strokeType="INSIDE" />
+      <Ellipse fill="#179a55" layoutX="569.0" layoutY="31.0" radiusX="11.0" radiusY="13.0" stroke="#179a55" strokeType="INSIDE" />
    </children>
 </AnchorPane>
