--- a/src/ui/Menu.fxml
+++ b/src/ui/Menu.fxml
@@ -2,12 +2,28 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Ellipse?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="343.0" prefWidth="332.0" style="-fx-background-color: #2965BD;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="addButton" layoutX="181.0" layoutY="126.0" mnemonicParsing="false" onAction="#add" text="Agregar estaciones o conexiones" />
-      <Button fx:id="showButton" layoutX="224.0" layoutY="185.0" mnemonicParsing="false" onAction="#show" text="Mostrar Conexiones" />
-      <Button fx:id="findButton" layoutX="205.0" layoutY="249.0" mnemonicParsing="false" onAction="#find" text="Encontrar camino minimo" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c2d6f7" height="343.0" stroke="#ffffff00" strokeType="INSIDE" width="55.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="343.0" stroke="#182f54" strokeType="INSIDE" strokeWidth="4.0" width="332.0" />
+      <Button fx:id="addButton" layoutX="97.0" layoutY="261.0" mnemonicParsing="false" onAction="#add" style="-fx-background-color: #0F408D;" text="Agregar una nueva ruta" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></Button>
+      <Button fx:id="showButton" layoutX="136.0" layoutY="157.0" mnemonicParsing="false" onAction="#show" style="-fx-background-color: #0F408D;" text="Mostrar rutas" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></Button>
+      <Button fx:id="findButton" layoutX="83.0" layoutY="207.0" mnemonicParsing="false" onAction="#find" prefHeight="29.0" prefWidth="228.0" style="-fx-background-color: #0F408D;" text="Cononcer que ruta necesito" textFill="#c2d6f7">
+         <font>
+            <Font name="Lucida Bright Demibold" size="15.0" />
+         </font></Button>
+      <Ellipse fill="#dd0d27" layoutX="305.0" layoutY="29.0" radiusX="13.0" radiusY="15.0" stroke="#dd0d27" strokeType="INSIDE" />
+      <Ellipse fill="#2495c8" layoutX="252.0" layoutY="33.0" radiusX="9.0" radiusY="11.0" stroke="#2495c8" strokeType="INSIDE" />
+      <Ellipse fill="#179a55" layoutX="277.0" layoutY="31.0" radiusX="11.0" radiusY="13.0" stroke="#179a55" strokeType="INSIDE" />
    </children>
 </AnchorPane>
