--- a/src/ui/Menu.fxml
+++ b/src/ui/Menu.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="343.0" prefWidth="332.0" style="-fx-background-color: #2965BD;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="343.0" prefWidth="332.0" style="-fx-background-color: #2965BD;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#c2d6f7" height="343.0" stroke="#ffffff00" strokeType="INSIDE" width="55.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="343.0" stroke="#182f54" strokeType="INSIDE" strokeWidth="4.0" width="332.0" />
@@ -18,7 +18,7 @@
          <font>
             <Font name="Lucida Bright Demibold" size="15.0" />
          </font></Button>
-      <Button fx:id="findButton" layoutX="83.0" layoutY="207.0" mnemonicParsing="false" onAction="#find" prefHeight="29.0" prefWidth="228.0" style="-fx-background-color: #0F408D;" text="Cononcer que ruta necesito" textFill="#c2d6f7">
+      <Button fx:id="findButton" layoutX="83.0" layoutY="207.0" mnemonicParsing="false" onAction="#find" prefHeight="29.0" prefWidth="228.0" style="-fx-background-color: #0F408D;" text="Conocer que ruta necesito" textFill="#c2d6f7">
          <font>
             <Font name="Lucida Bright Demibold" size="15.0" />
          </font></Button>
